# sqatt

./: .markdownlint.rb  .mdlrc  .prospector.yaml  .pycodestyle  .pydocstylerc  .pylintrc  .sqatt_style.rb  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: githubci.yml
doc/: coding_rules.puml  create_codingrule_profile.puml  mindmap.puml
doc/manual/: introduction.md
features/jira/: issue_types.feature  issue_workflow.feature
src/: __init__.py
src/churn/: __init__.py  churn.py
src/cloc/: __init__.py  cloc_analysis.ini  cloc_analysis.py  cloc_analysis.yml  cloc_analyze_file_size.py  cloc_code_size.py  cloc_code_type.py  cloc_code_volume.py  cloc_languages.py  cloc_measure.py  cloc_settings.py  readme.md
src/cpd/: __init__.py  cpd_analysis.py
src/dashboard/: __init__.py  app.py  code_breakdown.py  code_duplication.py  file_size.py  function_metrics.py  header.py  language_breakdown.py  overview.py
src/dotcover/: UnitTest.xml  dotcover.py
src/facility/: __init__.py  subprocess.py
src/includegraph/: __init__.py  includegraph.py  includegraph_old.py  readme.md
src/jira/: __init__.py  age.py  jira.md  jira_issue_types.yml  jira_metrics.py  jira_permission_scheme.yml  jira_workflow.puml  jira_wrapper.py  pmi.py
src/lizard/: __init__.py  lizard_analysis.py  lizard_function_complexity.py  lizard_function_parameters.py  lizard_function_size.py
src/profile/: MetricProfile.py  MetricRegion.py  __init__.py  colors.py  metric_profile.py  metric_region.py  show.py  sqatt_profiles.py
src/reporting/: __init__.py  reporting.py
src/repositorymining/: __init__.py  analyze_churn.py  analyze_commit_activity.py  repository_analysis.py
src/resharper/: __init__.py  resharper_profile.py  resharper_results.xml
src/riskmatrix/: __init__.py  quadrant_metric_thresholds.csv  risk_matrix.py
src/treemap/: __init__.py  treemap.py
src/understand/: __init__.py  understand_analysis.py  understand_code_size.py  understand_file_metrics.py  understand_file_metricsy.py  understand_function_complexity.py  understand_function_fan_in.py  understand_function_fan_out.py  understand_function_metrics.py  understand_function_parameters.py  understand_function_size.py  understand_report.py  understand_small_interfaces.py
test/: __init__.py  component_coverage.csv  component_risk_level.csv  test_cloc_analysis.py  test_cloc_code_size.py  test_cloc_code_type.py  test_cloc_file_size_analysis.py  test_cloc_language.py  test_cloc_measure.py  test_cpd_analysis.py  test_dotcover.py  test_lizard_analysis.py  test_lizard_function_size.py  test_metric_profile.py  test_reporting.py  test_resharper_profile.py  test_riskmatrix.py  test_sqatt_profiles.py  test_subprocess.py  test_understand_analysis.py  test_understand_report.py
test/churn/: test_churn.py
test/cloc/: test_cloc_analysis.py  test_cloc_analyze_file_size.py  test_cloc_code_size.py  (+5 more)
(+17 files in other folders)
