[tool.poetry]
name = "sqatt2"
version = "0.1.0"
description = ""
authors = ["Robbert <robbert.schuitema@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3rc1"
pyyaml = "^5.3.1"
xmltodict = "^0.12.0"
requests = "^2.24"
jira = "^2.0.0"
bokeh = "^2.2.3"
anytree = "^2.8.0"
lizard = "^1.17.7"
plotly = "^4.14.1"
pandas = "^1.2.0"
dash = "^1.19.0"
dash-bootstrap-components = "^0.11.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
behave = "^1.2.6"
black = "^20.8b1"
cohesion = "^1.0.0"
coverage-enable-subprocess = "^1.0"
mock = "^4.0.2"
nose = "^1.3.7"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
pylint = "^2.6.0"
pytest = "^6.1.1"
vulture = "2.1"
lizard = "^1.17.7"
radon = "^4.3.2"
xenon = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
