[tool.poetry]
name = "sqatt"
version = "0.1.0"
description = "Set of scripts to analyze quality aspects of a codebase"
authors = ["Robbert <robbert.schuitema@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
plotly = "^5.13.0"
dash = "^2.15.0"
dash-bootstrap-components = "^1.3.1"
networkx = "^3.0"
graphviz = "^0.20.1"
xmltodict = "^0.13.0"
requests = "^2.32.0"
jira = "^3.4.1"
bokeh = "^3.0.3"
anytree = "^2.8.0"
pydriller = "^2.4"
understand = "^0.0.3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
pytest = "^7.2.1"
coverage = "^7.1.0"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
black = "^24.3.0"
bandit = "^1.7.4"
behave = "^1.2.6"
cohesion = "^1.0.0"
radon = "^5.1.0"
xenon = "^0.9.0"
vulture = "^2.7"
lizard = "^1.17.10"
mock = "^5.0.1"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80